fix #2399 Light refactoring and bugfixing.